# apple-ml-server

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  SPEC.md  ecosystem.config.js  openapi.yaml
.github/workflows/: ci.yml
AppleML/: Package.swift  project.yml
AppleML/AppleML/: Info.plist
AppleML/AppleML.xcodeproj/: project.pbxproj
AppleML/AppleML.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
AppleML/AppleML/App/: AppleMLApp.swift  MenuBarView.swift
AppleML/AppleML/Core/: LanguageDetector.swift  Models.swift  OCRService.swift  SpeechWorker.swift  TranscribeService.swift
AppleML/AppleML/Server/: OpenAPISpec.swift  Routes.swift  ServerManager.swift
AppleML/AppleML/Storage/: HistoryItem.swift  HistoryStore.swift
AppleML/AppleML/Views/: HistoryDetailView.swift  MainView.swift  NewTaskView.swift  OCRView.swift  SettingsView.swift  TranscribeView.swift
archived/server/: Info.plist  Package.swift
archived/server/Sources/: Models.swift  OCRService.swift  SpeechWorker.swift  TranscribeService.swift
cli/: Cargo.toml
cli/src/: main.rs
docs/: API.md  MANIFEST.md  architecture.md  design.md  tasks.md
sdk/: Cargo.toml
sdk/src/: client.rs  error.rs  lib.rs  types.rs
sdk/tests/: test_client.rs
server/: Package.swift
server/Sources/: LanguageDetector.swift  Models.swift  SpeechWorker.swift  TranscribeService.swift  main.swift
