[package]
name = "apple-ml-cli"
version = "0.1.0"
edition = "2021"
description = "CLI client for Apple ML Server"

[[bin]]
name = "apple-ml"
path = "src/main.rs"

[dependencies]
apple-ml-sdk = { path = "../sdk" }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
