[package]
name = "apple-ml-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Apple ML Server - Speech-to-text and OCR"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
base64 = "0.22"

[dev-dependencies]
mockito = "1"
tempfile = "3"
